fix: language modal styling (resolves #1654, #1653, #1652) (#1656)
* fix: language modal dialog: Spacing for text

* fix: cookie consent background in dark mode

* fix: language modal dialog: No logo

* fix: don't dismiss by clicking anywhere on screen

* fix: language modal dialog: Scroll bar position

* fix: focus styling hard to see in language modal

--- a/resources/css/components/_language-modal.css
+++ b/resources/css/components/_language-modal.css
@@ -15,11 +15,12 @@
 .language-modal .modal {
     background: transparent;
     max-height: 100vh;
+    max-width: 100vw;
     overflow-y: auto;
     padding-block: var(--space-8);
 }
 
-.language-modal .logo {
+.language-modal__logo {
     height: var(--space-14);
     min-height: var(--space-14);
     width: auto;
@@ -35,6 +36,10 @@
     margin-block-start: var(--space-8);
 }
 
+.language-modal .cta:focus {
+    --cta-outline: var(--color-grey-2);
+}
+
 .language-modal .signed {
     height: var(--space-8);
     min-height: var(--space-8);
@@ -47,15 +52,9 @@
 }
 
 @media (min-width: 48rem) {
-    .language-modal .modal {
-        max-width: var(--max-w-max);
-    }
-
-    .language-modal .logo {
-        height: var(--space-13);
-    }
-
     .language-modal nav {
+        display: flex;
+        justify-content: center;
         padding-block-end: var(--space-29);
     }
 
@@ -63,6 +62,8 @@
         --grid-cell-min-width: var(--space-36);
 
         margin-block-start: var(--space-16);
+        max-width: var(--max-w-6xl);
+        width: 100%;
     }
 
     .language-modal .cta {
